// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicQueryBuilder -> Boolean Criterion should render 1`] = `
.c1 {
  min-height: 30px;
  width: 100%;
}

.c0 {
  margin-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  width: 20%;
  min-width: 50px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <label
        className="c2"
        htmlFor="statement.result.success-1"
      >
        True:  
      </label>
      <input
        checked={false}
        id="statement.result.success-1"
        name="statement.result.success"
        onChange={[Function]}
        type="radio"
        value="true"
      />
    </div>
    <div>
      <label
        className="c2"
        htmlFor="statement.result.success-2"
      >
        False:  
      </label>
      <input
        checked={false}
        id="statement.result.success-2"
        name="statement.result.success"
        onChange={[Function]}
        type="radio"
        value="false"
      />
    </div>
  </div>
</div>
`;

exports[`BasicQueryBuilder -> Boolean Criterion with value 1`] = `
.c1 {
  min-height: 30px;
  width: 100%;
}

.c0 {
  margin-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  width: 20%;
  min-width: 50px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <label
        className="c2"
        htmlFor="statement.result.success-3"
      >
        True:  
      </label>
      <input
        checked={false}
        id="statement.result.success-3"
        name="statement.result.success"
        onChange={[Function]}
        type="radio"
        value="true"
      />
    </div>
    <div>
      <label
        className="c2"
        htmlFor="statement.result.success-4"
      >
        False:  
      </label>
      <input
        checked={false}
        id="statement.result.success-4"
        name="statement.result.success"
        onChange={[Function]}
        type="radio"
        value="false"
      />
    </div>
  </div>
</div>
`;
